--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main class="profile">
             <!-- Replace headshot image in main -->
             <img src="img/Rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
-            <h1>Hello World!</h1>
+            <h1>Hello There!</h1>
             <p>
                 My name is Rocky Parker.<br>I'm an <i>apsiring</i> web developer from New Mexico.
             </p>
