--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 My name is Rocky Parker.<br>I'm an <i>apsiring</i> web developer from New Mexico.
             </p>
             <p>
-                Check out my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">previous work</a>.
+                I currently work in marketing and public relations. Check out some of my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">previous work</a>.
             </p>
         </main>
         <footer class="page-footer">
