Add URLs to social media icons in footer
Replace placeholder URLs with personal profile URLs for LinkedIn, Facebook, GitHub

--- a/about.html
+++ b/about.html
@@ -393,11 +393,11 @@
         <footer class="page-footer">
             <!-- Replace social media URLs in footer -->
             <p>Find me on</p>
-                <div class="social-media">
-                    <a href="https://www.linkedin.com"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
-                    <a href="https://www.facebook.com"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
-                    <a href="https://www.github.com"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
-                </div>
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/raquela-parker-009aa0129"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
+                <a href="https://www.facebook.com/rocky.chiado"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
+                <a href="https://github.com/RParker505/"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
+            </div>
         </footer>
         <script src="js/tota11y.min.js"></script>
     </body>
