Add list of hobbies to about page

--- a/about.html
+++ b/about.html
@@ -34,8 +34,15 @@
         <main class="about-me">
             <h1>Get to Know Rocky</h1>
             <p>
-                Yes, I really go by Rocky. I live in Albuquerque, NM, with my husband, Chase, and our pitbull, Hudson. I enjoy reading, watching movies, crocheting, and cooking. I've been working in marketing and public relations since 2010.
+                Yes, I really go by Rocky. I live in Albuquerque, NM, with my husband, Chase, and our pitbull, Hudson. I've been working in marketing and public relations since 2010.
             </p>
+            <p>I enjoy:</p>
+            <ul>
+                <li>Reading</li>
+                <li>Watching Movies</li>
+                <li>Crocheting</li>
+                <li>Cooking</li>
+            </ul>
             <table>
                 <thead>
                     <tr>
