Add family photo to about page

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
             </nav>
         </header>
         <main class="about-me">
+            <img src="img/Rocky-Chase.jpg" class="family__portrait" alt="Rocky and Chase family photo" />
             <h1>Get to Know Rocky</h1>
             <p>
                 Yes, I really go by Rocky. I live in Albuquerque, NM, with my husband, Chase, and our pitbull, Hudson. I've been working in marketing and public relations since 2010.
