Update resume button text

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="files/rocky-parker-resume.pdf" class="button" download target="_blank">Download my resume</a>
+                <a href="files/rocky-parker-resume.pdf" class="button" download target="_blank">View my resume</a>
                 <div class="balloon">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="700" height="700">
                     <defs>
