Update contact details
Remove duplicate email URL and test button. Add icons for phone and email.

--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,13 @@
                 </ul>
             </nav>
         </header>
-        <div>
-            <a href="mailto:rchiado75@gmail.com?subject=Hi%20Rocky!">rchiado75@gmail.com</a>
-            <a href="tel:+1(505)610-1728" aria-label="telephone">+1(505)610-1728</a>
-            <a href="mailto:rchiado75@gmail.com">Contact Rocky</a>
-            <button type="button">Test button</button>
+        <div class="contact-details">
+            <div>
+              <img src="img/phone-icon.svg" alt="Phone icon" />
+              <a href="tel:+1(505)610-1728" aria-label="telephone">Call Rocky</a></div>
+            <div>
+              <img src="img/email-icon.svg" alt="Email icon" />
+              <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
         <div>
             <form action="#" method="post" id="contact-form">
