Add class name to contact page icons

--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
         </header>
         <div class="contact-details">
             <div>
-              <img src="img/phone-icon.svg" alt="Phone icon" />
+              <img src="img/phone-icon.svg" alt="Phone icon" class="contact-details__icon"/>
               <a href="tel:+1(505)610-1728" aria-label="telephone">Call Rocky</a></div>
             <div>
-              <img src="img/email-icon.svg" alt="Email icon" />
+              <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
               <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
         <div>
