--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="img/Rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
             <h1>Hello There!</h1>
             <p>
-                My name is Rocky Parker.<br>I'm an <i>apsiring</i> web developer from New Mexico.
+                My name is Rocky Parker.<br>I'm an <i>aspiring</i> web developer from New Mexico.
             </p>
             <p>
                 I currently work in marketing and public relations. Check out some of my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">previous work</a>.
