--- a/contact.html
+++ b/contact.html
@@ -57,9 +57,9 @@
             <!-- Replace social media URLs in footer -->
             <p>Find me on</p>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/raquela-parker-009aa0129"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
-                <a href="https://www.facebook.com/rocky.chiado"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
-                <a href="https://github.com/RParker505/"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
+                <a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
+                <a href="https://www.facebook.com/rocky.chiado" target="_blank"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
+                <a href="https://github.com/RParker505/" target="_blank"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
             </div>
         </footer>
         <script src="js/tota11y.min.js"></script>
