--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,10 @@
         <div>
             <form action="#" method="post" id="contact-form">
                 <label for="email" class="standard-label">Email:*</label>
-                <input type="email" id="email" required>
+                <input type="email" id="email" required placeholder="example@gmail.com">
 
                 <label for="telephone" class="standard-label">Telephone:</label>
-                <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+                <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" placeholder="123-456-7890">
 
                 <label for="message" class="standard-label">Message*</label>
                 <textarea maxlength="240" id="message" required></textarea>
