Lowercase headshot image name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <main class="profile">
             <!-- Replace headshot image in main -->
-            <img src="img/Rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
+            <img src="img/rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
             <h1>Hello There!</h1>
             <p>
                 My name is Rocky Parker.<br>I'm an <i>aspiring</i> web developer from New Mexico.
