Add emoji to hobbies list on About page

--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
             </p>
             <p>I enjoy:</p>
             <ul>
-                <li>Reading</li>
-                <li>Watching Movies</li>
-                <li>Crocheting</li>
-                <li>Cooking</li>
+                <li>📚 Reading</li>
+                <li>🎬 Watching Movies</li>
+                <li>🧶 Crocheting</li>
+                <li>🍝 Cooking</li>
             </ul>
             <section class="work-experience">
                 <table>
