Change list style for hobbies
Add class name to hobbies list on About page and adjust css to remove bullets

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 Yes, I really go by Rocky. I live in Albuquerque, NM, with my husband, Chase, and our pitbull, Hudson. I've been working in marketing and public relations since 2010.
             </p>
             <p>I enjoy:</p>
-            <ul>
+            <ul class="hobbies-list">
                 <li>📚 Reading</li>
                 <li>🎬 Watching Movies</li>
                 <li>🧶 Crocheting</li>
