--- a/contact.html
+++ b/contact.html
@@ -63,5 +63,8 @@
             </div>
         </footer>
         <script src="js/tota11y.min.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/fetch-polyfill.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
