Adjust telephone validation

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <input type="email" id="email" required placeholder="example@gmail.com">
 
                 <label for="telephone" class="standard-label">Telephone:</label>
-                <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" placeholder="123-456-7890">
+                <input type="tel" id="telephone" placeholder="123-456-7890">
 
                 <label for="message" class="standard-label">Message*</label>
                 <textarea maxlength="240" id="message" required></textarea>
