--- a/contact.html
+++ b/contact.html
@@ -41,17 +41,17 @@
         </div>
         <div>
             <form action="#" method="post" id="contact-form">
-                <div>
+                <div class="form-group">
                     <label for="email" class="standard-label">Email:*</label>
-                    <input type="email" id="email" required placeholder="example@gmail.com">
+                    <input type="email" id="email" class="form-control" required placeholder="example@gmail.com">
                 </div>
-                <div>
+                <div class="form-group">
                     <label for="telephone" class="standard-label">Telephone:</label>
-                    <input type="tel" id="telephone" placeholder="123-456-7890">
+                    <input type="tel" id="telephone" class="form-control" placeholder="123-456-7890">
                 </div>
-                <div>
+                <div class="form-group">
                     <label for="message" class="standard-label">Message*</label>
-                    <textarea maxlength="240" id="message" required></textarea>
+                    <textarea maxlength="240" id="message" class="form-control" required></textarea>
                 </div>
                     <input type="submit" value="Send message">
             </form>
