Add col classes to contact form inputs

--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,15 @@
         </div>
         <div>
             <form action="#" method="post" id="contact-form">
-                <div class="form-group">
+                <div class="form-group col-6 col-xl-4">
                     <label for="email" class="standard-label">Email:*</label>
                     <input type="email" id="email" class="form-control" required placeholder="example@gmail.com">
                 </div>
-                <div class="form-group">
+                <div class="form-group col-6 col-xl-4">
                     <label for="telephone" class="standard-label">Telephone:</label>
                     <input type="tel" id="telephone" class="form-control" placeholder="123-456-7890">
                 </div>
-                <div class="form-group">
+                <div class="form-group col-6 col-xl-4">
                     <label for="message" class="standard-label">Message*</label>
                     <textarea maxlength="240" id="message" class="form-control" required></textarea>
                 </div>
