--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
               <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
-        <div>
-            <form action="#" method="post" id="contact-form">
+        <div class="contact-form">
+            <form action="#" method="post">
                 <div class="form-group col-6 col-xl-4">
                     <label for="email" class="standard-label">Email:*</label>
                     <input type="email" id="email" class="form-control" required placeholder="example@gmail.com">
