Update id for the contact form to work with js form validation

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
               <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
         <div class="contact-form">
-            <form action="#" method="post">
+            <form action="#" method="post" id="contact-rocky">
                 <div class="form-group col-10 col-xl-6">
                     <label for="email" class="standard-label">Email:*</label>
                     <input type="email" id="email" class="form-control" required placeholder="example@gmail.com">
