--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     <input type="email" id="email" class="form-control" required placeholder="example@gmail.com">
                 </div>
                 <div class="form-group col-10 col-xl-6">
-                    <label for="telephone" class="standard-label">Telephone:</label>
+                    <label for="telephone" class="standard-label">Telephone:*</label>
                     <input type="tel" id="telephone" class="form-control" placeholder="123-456-7890">
                 </div>
                 <div class="form-group col-10 col-xl-6">
