Add a header to contact page and center align it

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
               <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
+        <h2 class="contact-header">Connect with me! Fill out the form below to get in touch.</h2>
         <div class="contact-form">
             <form action="#" method="post" id="contact-rocky">
                 <div class="form-group col-10 col-xl-6">
