--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
                 </ul>
             </nav>
         </header>
-        <div class="contact-details">
-            <div>
+        <div class="row justify-content-center contact-details">
+            <div class="col-4 d-flex justify-content-center text-center">
               <img src="img/phone-icon.svg" alt="Phone icon" class="contact-details__icon"/>
               <a href="tel:+1(505)610-1728" aria-label="telephone">Call Rocky</a></div>
-            <div>
+            <div class="col-4 d-flex justify-content-center text-center">
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
               <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
         </div>
