--- a/contact.html
+++ b/contact.html
@@ -13,23 +13,32 @@
     </head>
     <body>
         <header class="page-header">
-            <img src="img/rocky-portfolio-logo.svg" alt="circular logo with a sun behind several wildflowers" width="200" class="page-header__item" />
-            <nav class="main-navigation page-header__item">
-                <ul role="menubar" class="navigation-list">
-                    <li role="presentation">
-                        <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #223759;">
+                <a class="navbar-brand" href="#">
+                  <img src="img/rocky-portfolio-logo.svg" width="100" class="d-inline-block align-top" alt="">
+                  Rocky Parker
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li role="presentation">
-                        <a href="about.html" role="menuitem" class="navigation-list__item">About Rocky</a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">About Rocky</a>
                     </li>
-                    <li role="presentation">
-                        <a href="work.html" role="menuitem" class="navigation-list__item">Rocky's Work</a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="work.html">Rocky's Work</a>
                     </li>
-                    <li role="presentation">
-                        <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="contact.html">Contact</a>
+                    </li>      
+                  </ul>
+                </div>
+              </nav>
         </header>
         <div class="row justify-content-center contact-details">
             <div class="col-4 d-flex justify-content-center text-center">
