Add work item for Meet App

--- a/work.html
+++ b/work.html
@@ -53,14 +53,6 @@
                     <a href="https://github.com/RParker505/portfolio-website" target="_blank">View Portfolio Repository</a>
                 </div>
                 <div class="project-grid__item">
-                  <img src="img/hello-world-project.png" class="project-grid__item-photo" alt="An open laptop on a desk" />  
-                    <h2>Hello World!</h2>
-                    <p>
-                        I created this GitHub README before beginning the Full Stack Web Development course with CareerFoundry. It was part of my course prep and helped me get comfortable with the GitHub platform and workflow.
-                    </p>
-                    <a href="https://github.com/RParker505/hello-world" target="_blank">View on GitHub</a>
-                </div>
-                <div class="project-grid__item">
                     <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
                     <h2>Pokedex App</h2>
                     <p>
@@ -75,6 +67,35 @@
                         I created a basic to-do list app using a mix of HTML, CSS and jQuery. Users can add, remove, cross out and reorder items on the list.
                     </p>
                     <a href="https://github.com/RParker505/to-do-list-app" target="_blank">View on GitHub</a>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
+                    <h2>Meet App</h2>
+                    <p>
+                        The <a href="https://rparker505.github.io/meet/">Meet App</a> is a serverless, progressive web application (PWA) built with React using a test-driven development (TDD) technique. The application uses a Google Calendar API to fetch upcoming events.
+                    </p>
+                    <p>
+                      Users can search for events in a specific city and adjust the number of events displayed.
+                    </p>
+                    <p>
+                      Technologies used:
+                    </p>
+                    <ul>
+                      <li>React</li>
+                      <li>Jest</li>
+                      <li>Cucumber</li>
+                      <li>Puppeteer</li>
+                      <li>Recharts</li>
+                    </ul>
+                    <a href="https://github.com/RParker505/meet" target="_blank">View on GitHub</a>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/hello-world-project.png" class="project-grid__item-photo" alt="An open laptop on a desk" />  
+                    <h2>Hello World!</h2>
+                    <p>
+                        I created this GitHub README before beginning the Full Stack Web Development course with CareerFoundry. It was part of my course prep and helped me get comfortable with the GitHub platform and workflow.
+                    </p>
+                    <a href="https://github.com/RParker505/hello-world" target="_blank">View on GitHub</a>
                 </div>
             </div>
         </section>
