Add work item for SpookyVibes app

--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
                     <p>
                         Yes, I'm talking about the website you're viewing right now! I created this multi-page website from scratch in just under one month. The project repository is public on GitHub.
                     </p>
-                    <a href="https://github.com/RParker505/portfolio-website" target="_blank">View Portfolio Repository</a>
+                    <a href="https://github.com/RParker505/portfolio-website" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                     <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
@@ -61,18 +61,28 @@
                     <a href="https://github.com/RParker505/pokedex-js-app" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
-                    <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
-                    <h2>Simple To-Do List</h2>
-                    <p>
-                        I created a basic to-do list app using a mix of HTML, CSS and jQuery. Users can add, remove, cross out and reorder items on the list.
-                    </p>
-                    <a href="https://github.com/RParker505/to-do-list-app" target="_blank">View on GitHub</a>
+                  <img src="img/spookyvibes.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
+                  <h2>SpookyVibes</h2>
+                  <p>
+                      I used the MERN stack to build the client-side and user-side code for my horror movie app, <a href="https://spookyvibes.netlify.app/" target="_blank">SpookyVibes</a>.
+                  </p>
+                  <p>
+                      Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>React</li>
+                    <li>Parcel</li>
+                    <li>React Bootstrap</li>
+                    <li>Redux</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                   <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
                     <h2>Meet App</h2>
                     <p>
-                        The <a href="https://rparker505.github.io/meet/">Meet App</a> is a serverless, progressive web application (PWA) built with React using a test-driven development (TDD) technique. The application uses a Google Calendar API to fetch upcoming events.
+                        The <a href="https://rparker505.github.io/meet/" target="_blank">Meet App</a> is a serverless, progressive web application (PWA) built with React using a test-driven development (TDD) technique. The application uses a Google Calendar API to fetch upcoming events.
                     </p>
                     <p>
                       Users can search for events in a specific city and adjust the number of events displayed.
@@ -88,6 +98,20 @@
                       <li>Recharts</li>
                     </ul>
                     <a href="https://github.com/RParker505/meet" target="_blank">View on GitHub</a>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
+                  <h2>Simple To-Do List</h2>
+                  <p>
+                      This is a basic to-do list that allows users to add, remove, cross out and reorder items on the list.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JQuery</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/to-do-list-app" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                   <img src="img/hello-world-project.png" class="project-grid__item-photo" alt="An open laptop on a desk" />  
