Update text in project tiles to provide more context

--- a/work.html
+++ b/work.html
@@ -50,14 +50,28 @@
                     <p>
                         Yes, I'm talking about the website you're viewing right now! I created this multi-page website from scratch in just under one month. The project repository is public on GitHub.
                     </p>
+                    <p>Technologies used:</p>
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>JavaScript</li>
+                      <li>Bootstrap</li>
+                    </ul>
                     <a href="https://github.com/RParker505/portfolio-website" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                     <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
                     <h2>Pokedex App</h2>
                     <p>
-                        In this project, I built a small web application with HTML, CSS, and JavaScript that loads data from an external API to display 100 Pokemons and their details.
+                        In this project, I built a small web application that loads data from an external API to display 100 Pokemons and their details.
                     </p>
+                    <p>Technologies used:</p>
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>JavaScript</li>
+                      <li>Bootstrap</li>
+                    </ul>
                     <a href="https://github.com/RParker505/pokedex-js-app" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
@@ -73,6 +87,9 @@
                   <ul>
                     <li>React</li>
                     <li>Parcel</li>
+                    <li>MongoDB</li>
+                    <li>Express</li>
+                    <li>Node.js</li>
                     <li>React Bootstrap</li>
                     <li>Redux</li>
                   </ul>
