Update homepage intro text

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
             <img src="img/rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
             <h1>Hello There!</h1>
             <p>
-                My name is Rocky Parker.<br>I'm an <i>aspiring</i> web developer from New Mexico.
+              Hi, I’m Rocky. I’m a seasoned content and media relations specialist who is making the exciting transition into web development.
             </p>
             <p>
-                I currently work in marketing and public relations. Check out some of my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">previous work</a>.
+              In previous roles, I’ve specialized in SEO, content creation, editing, project management and social media. My passion for creating visually appealing and functional blog pages motivated me to expand into full stack web development. I am excited to apply my diverse skill set in a role where I can further develop my coding proficiency while contributing my project management and content creation skills to a dynamic team.
+            </p>
+            <p>
+                I currently work in marketing and public relations. Check out some of my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">writing portfolio</a>.
             </p>
         </main>
         <footer class="page-footer">
