Update footer text on about, contact and work pages

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         </div>
         <footer class="page-footer">
             <!-- Replace social media URLs in footer -->
-            <p>Find me on</p>
+            <p><b>Connect with me!</b></p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
                 <a href="https://www.facebook.com/rocky.chiado" target="_blank"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
