Add text to work page intro and add styles for it

--- a/work.html
+++ b/work.html
@@ -43,6 +43,9 @@
 
         <section>
             <h1 class="work-header">My Work</h1>
+            <p class="work-intro">
+              Take a look at my coding projects, which include a range of technologies and serve various use cases.
+            </p>
             <div class="project-grid" role="grid">
                 <div class="project-grid__item">
                     <img src="img/portfolio-website-project.png" class="project-grid__item-photo" alt="A laptop, notebook paper and coffee on a tabletop" />
