--- a/work.html
+++ b/work.html
@@ -49,9 +49,9 @@
             <div class="project-grid" role="grid">
                 <div class="project-grid__item">
                     <img src="img/portfolio-website-project.png" class="project-grid__item-photo" alt="A laptop, notebook paper and coffee on a tabletop" />
-                    <h2>Portfolio Website</h2>
+                    <h2><a href="https://rparker505.github.io/portfolio-website/" target="_blank">Portfolio Website</a></h2>
                     <p>
-                        Yes, I'm talking about the website you're viewing right now! I created this multi-page website from scratch in just under one month. The project repository is public on GitHub.
+                        Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from scratch to highlight the projects I've built in my Full-Stack Web Development course.
                     </p>
                     <p>Technologies used:</p>
                     <ul>
@@ -64,10 +64,13 @@
                 </div>
                 <div class="project-grid__item">
                     <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
-                    <h2>Pokedex App</h2>
+                    <h2><a href="https://rparker505.github.io/pokedex-js-app/" target="_blank">Pokedex App</a></h2>
                     <p>
                         In this project, I built a small web application that loads data from an external API to display 100 Pokemons and their details.
                     </p>
+                    <p>
+                      The dynamic JavaScript app allows users to scroll through a list of collapsed Pokemon items and expand for more details on-demand.
+                  </p>
                     <p>Technologies used:</p>
                     <ul>
                       <li>HTML</li>
