--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
                 </div>
               </nav>
         </header>
-        <h2 class="contact-header">Connect with me! Fill out the form below to get in touch.</h2>
-        <div class="contact-form">
+        <h2 class="contact-header">Contact Me</h2>
+        <!-- <div class="contact-form">
             <form action="#" method="post" id="contact-rocky">
                 <div class="form-group col-10 col-xl-6">
                     <label for="email" class="standard-label">Email:*</label>
@@ -57,17 +57,22 @@
                 </div>
                     <input type="submit" value="Send message">
             </form>
-        </div>
-        <div class="row justify-content-center contact-details">
+        </div> -->
+        <div class="contact-details">
+            <div class="col-4 d-flex justify-content-center text-center">
+              <img src="img/location-icon.png" alt="Location icon" class="contact-details__icon"/>
+              Location: <a href="tel:+1(505)610-1728" aria-label="telephone">Albuquerque, NM</a>
+            </div>
             <div class="col-4 d-flex justify-content-center text-center">
               <img src="img/phone-icon.svg" alt="Phone icon" class="contact-details__icon"/>
-              <a href="tel:+1(505)610-1728" aria-label="telephone">Call Rocky</a></div>
+              Phone: <a href="tel:+1(505)610-1728" aria-label="telephone">+1(505)-610-1728</a>
+            </div>
             <div class="col-4 d-flex justify-content-center text-center">
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
-              <a href="mailto:rchiado75@gmail.com">Email Rocky</a></div>
+              Email: <a href="mailto:rchiado75@gmail.com">rchiado75@gmail.com</a>
+            </div>
         </div>
         <footer class="page-footer">
-            <!-- Replace social media URLs in footer -->
             <p><b>Connect with me!</b></p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
