--- a/work.html
+++ b/work.html
@@ -57,7 +57,6 @@
                     <ul>
                       <li>HTML</li>
                       <li>CSS</li>
-                      <li>JavaScript</li>
                       <li>Bootstrap</li>
                     </ul>
                     <a href="https://github.com/RParker505/portfolio-website" target="_blank">View on GitHub</a>
@@ -99,7 +98,8 @@
                     <li>React Bootstrap</li>
                     <li>Redux</li>
                   </ul>
-                  <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View on GitHub</a>
+                  <a href="https://github.com/RParker505/movie_api" target="_blank">View server-side on GitHub</a><br>
+                  <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View client-side on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                   <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
@@ -135,6 +135,43 @@
                     <li>JQuery</li>
                   </ul>
                   <a href="https://github.com/RParker505/to-do-list-app" target="_blank">View on GitHub</a>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/chat-app.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
+                  <h2>Chat App</h2>
+                  <p>
+                      I used React Native, Expo, and Google Firestore Database to build this native chat app.
+                  </p>
+                  <p>
+                      The app provides users with a chat interface and options to share images and their location. It's optimized for both Android and iOS devices.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>React Native</li>
+                    <li>Expo</li>
+                    <li>Google Firestore</li>
+                    <li>Google Firebase</li>
+                    <li>Gifted Chat</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/chat-app" target="_blank">View on GitHub</a>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
+                  <h2>SpookyVibes - Angular</h2>
+                  <p>
+                      Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.</a>.
+                  </p>
+                  <p>
+                      Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>Angular</li>
+                    <li>Angular Material</li>
+                    <li>TypeScript</li>
+                    <li>TypeDoc</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
                   <img src="img/hello-world-project.png" class="project-grid__item-photo" alt="An open laptop on a desk" />  
