--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                     <input type="submit" value="Send message">
             </form>
         </div> -->
-        <div class="contact-details">
+        <div class="column justify-content-center contact-details">
             <div class="col-4 d-flex justify-content-center text-center">
               <img src="img/location-icon.png" alt="Location icon" class="contact-details__icon"/>
               Location: <a href="tel:+1(505)610-1728" aria-label="telephone">Albuquerque, NM</a>
