Clean up styles.css and adjust details on several pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <title>About Rocky</title>
         <link rel="shortcut icon" href="img/rocky-portfolio-logo.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
             <p>
                 Yes, I really go by Rocky. I live in Albuquerque, NM, with my husband, Chase, and our pitbull, Hudson. I've been working in marketing and public relations since 2010.
             </p>
-            <p>I enjoy:</p>
+            <p>When I'm not working or making my way through my full stack web development bootcamp course, I enjoy:</p>
             <ul class="hobbies-list">
                 <li>📚 Reading</li>
                 <li>🎬 Watching Movies</li>
@@ -63,6 +63,16 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <td>HTML</td>
+                            <td>3 years</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>2 years</td>
+                            <td>Intermediate</td>
+                        </tr>
                         <tr>
                             <td>Blog Writing</td>
                             <td>5 years</td>
@@ -82,6 +92,40 @@
                           <td>Web Content Management</td>
                           <td>5 years</td>
                           <td>Advanced</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>I also have beginner's experience with the following web development languages and tools:</p>
+                <table>
+                    <tbody>
+                        <thead>
+                            <tr>
+                                <th colspan="4">Extra Coding Experience</th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td>JQuery</td>
+                            <td>Bootstrap</td>
+                            <td>React</td>
+                        </tr>
+                        <tr>
+                            <td>Angular</td>
+                            <td>TypeScript</td>
+                            <td>Node.js</td>
+                            <td>Express</td>
+                        </tr>
+                        <tr>
+                            <td>Gifted Chat</td>
+                            <td>React Native</td>
+                            <td>Google Firebase</td>
+                            <td>MongoDB</td>
+                        </tr>
+                        <tr>
+                            <td>Postman</td>
+                            <td>Jest</td>
+                            <td>Cucumber</td>
+                            <td>Puppeteer</td>
                         </tr>
                     </tbody>
                 </table>
