--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <title>Contact Rocky</title>
         <link rel="shortcut icon" href="img/rocky-portfolio-logo.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -58,16 +58,16 @@
                     <input type="submit" value="Send message">
             </form>
         </div> -->
-        <div class="column justify-content-center contact-details">
-            <div class="col-4 d-flex justify-content-center text-center">
+        <div class="contact-details">
+            <div>
               <img src="img/location-icon.png" alt="Location icon" class="contact-details__icon"/>
-              Location: <a href="tel:+1(505)610-1728" aria-label="telephone">Albuquerque, NM</a>
+              Location: <a href="https://maps.app.goo.gl/CY6Gc7RCpcekKMo89">Albuquerque, NM</a>
             </div>
-            <div class="col-4 d-flex justify-content-center text-center">
+            <div>
               <img src="img/phone-icon.svg" alt="Phone icon" class="contact-details__icon"/>
               Phone: <a href="tel:+1(505)610-1728" aria-label="telephone">+1(505)-610-1728</a>
             </div>
-            <div class="col-4 d-flex justify-content-center text-center">
+            <div>
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
               Email: <a href="mailto:rchiado75@gmail.com">rchiado75@gmail.com</a>
             </div>
