--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
         <title>Rocky's Work</title>
         <link rel="shortcut icon" href="img/rocky-portfolio-logo.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -159,7 +159,7 @@
                   <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
                   <h2>SpookyVibes - Angular</h2>
                   <p>
-                      Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.</a>.
+                      Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
                   </p>
                   <p>
                       Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
