Update link to open in new tab and add link to case study

--- a/work.html
+++ b/work.html
@@ -100,6 +100,7 @@
                   </ul>
                   <a href="https://github.com/RParker505/movie_api" target="_blank">View server-side on GitHub</a><br>
                   <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View client-side on GitHub</a>
+                  <a href="files/spookyvibes-case-study.pdf" target="_blank">View Case Study</a>
                 </div>
                 <div class="project-grid__item">
                   <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
@@ -159,7 +160,7 @@
                   <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
                   <h2>SpookyVibes - Angular</h2>
                   <p>
-                      Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
+                      Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome" target="_blank">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
                   </p>
                   <p>
                       Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
