Add line break between links

--- a/work.html
+++ b/work.html
@@ -99,7 +99,7 @@
                     <li>Redux</li>
                   </ul>
                   <a href="https://github.com/RParker505/movie_api" target="_blank">View server-side on GitHub</a><br>
-                  <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View client-side on GitHub</a>
+                  <a href="https://github.com/RParker505/spookyVibes-client" target="_blank">View client-side on GitHub</a><br>
                   <a href="files/spookyvibes-case-study.pdf" target="_blank">View Case Study</a>
                 </div>
                 <div class="project-grid__item">
