Make SVG responsive with Bootstrap

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
                 </table>
                 <a href="files/rocky-parker-resume.pdf" class="button" download target="_blank">View my resume</a>
                 <div class="balloon">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="700" height="700" viewBox="0 0 500 500">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="img-fluid" width="700" height="700" viewBox="0 0 500 500">
                     <defs>
                         <lineargradient id="gradient_0" gradientUnits="userSpaceOnUse" x1="383.06107" y1="215.27565" x2="384.57718" y2="-1.9237741">
                             <stop offset="0" stop-color="#FF8B16"/>
