Add lang tag to each page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,7 +95,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <p>I also have beginner's experience with the following web development languages and tools:</p>
+                <p><br><br>I also have beginner's experience with the following web development languages and tools:</p>
                 <table>
                     <tbody>
                         <thead>
