--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
                 <li>🧶 Crocheting</li>
                 <li>🍝 Cooking</li>
             </ul>
+            <p>I currently specialize in SEO, content creation, editing, and project management. I'm recognized for my consistency, adaptability, and organizational skills.</p> 
+            <p>My love for building blog pages that look great and function as needed led me to recently expand my skillset to include full stack web development. I've refined my skills in HTML and CSS and developed knowledge of JavaScript, GitHub, React, Angular, database building, debugging, code testing and more to craft visually appealing and functional web pages and applications.</p>
             <section class="work-experience">
                 <table>
                     <thead>
