Add Twitter/X to social media links in footer

--- a/work.html
+++ b/work.html
@@ -193,6 +193,7 @@
                 <a href="https://www.facebook.com/rocky.chiado" target="_blank"><img src="img/facebook-icon.svg" alt="Facebook icon" /></a>
                 <a href="https://github.com/RParker505/" target="_blank"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
                 <a href="https://medium.com/@rchiado75" target="_blank"><img src="img/medium-logo-icon.svg" alt="Medium icon" /></a>
+                <a href="https://x.com/RParker505" target="_blank"><img src="img/twitter-icon.svg" alt="X icon" /></a>
             </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
