Update work and about pages with new projects

--- a/about.html
+++ b/about.html
@@ -129,6 +129,12 @@
                             <td>Cucumber</td>
                             <td>Puppeteer</td>
                         </tr>
+                        <tr>
+                            <td>Python</td>
+                            <td>Django</td>
+                            <td>Heroku</td>
+                            <td>SQLAlchemy</td>
+                        </tr>
                     </tbody>
                 </table>
                 <a href="files/rocky-parker-resume.pdf" class="button" download target="_blank">View my resume</a>
