--- a/work.html
+++ b/work.html
@@ -124,6 +124,46 @@
                     <a href="https://github.com/RParker505/meet" target="_blank">View on GitHub</a>
                 </div>
                 <div class="project-grid__item">
+                  <img src="img/recipe-app-django.png" class="project-grid__item-photo" alt="Django Recipe app screenshot" />
+                  <h2>Recipe App (Coming Soon!)</h2>
+                  <p>
+                    In this app, I used the Django web framework to rebuild a command-line-only recipe app into a fully fledged web application with multiple users and an admin panel.
+                  </p>
+                  <p>
+                    Users can log in and create their own content. The app also has statistical dashboards, implementing data analytics and data visualization skills. Finally, the code features automatic testing scripts to prevent code errors and help with debugging.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>Python</li>
+                    <li>Django</li>
+                    <li>SQLite</li>
+                    <li>Heroku</li>
+                    <li>Postgres</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/recipe-app" target="_blank">View on GitHub</a><br>
+                  <a href="" target="_blank">View Deployed App (coming soon!)</a><br>
+                  <a href="https://github.com/RParker505/python-django" target="_blank">View App Learning Progress</a><br>
+                </div>
+                <div class="project-grid__item">
+                  <img src="img/recipe-app-cli.png" class="project-grid__item-photo" alt="Command Line Recipe app screenshot" />
+                  <h2>Recipe App (Command Line)</h2>
+                  <p>
+                    In this app, I familiarized myself with Python fundamentals, data structures and object-oriented programming to build a command line application for a Recipe app.
+                  </p>
+                  <p>
+                    Users can create and modify recipes with ingredients, cooking time and a difficulty parameter that is automatically calculated by the app. Users are also able to search for recipes by their ingredients.
+                  </p>
+                  <p>Technologies used:</p>
+                  <ul>
+                    <li>Python</li>
+                    <li>MySQL</li>
+                    <li>SQLAlchemy</li>
+                  </ul>
+                  <a href="https://github.com/RParker505/intro-to-python" target="_blank">View on GitHub</a><br>
+                </div>
+                <div class="project-grid__item">
                   <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
                   <h2>Simple To-Do List</h2>
                   <p>
