Replace phone number with timezone on contact page

--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
               Location: <a href="https://maps.app.goo.gl/CY6Gc7RCpcekKMo89">Albuquerque, NM</a>
             </div>
             <div>
-              <img src="img/phone-icon.svg" alt="Phone icon" class="contact-details__icon"/>
-              Phone: <a href="tel:+1(505)610-1728" aria-label="telephone">+1(505)-610-1728</a>
+              <img src="img/timezone-icon.png" alt="Timezone icon" class="contact-details__icon"/>
+              Timezone: Mountain (GMT-7)</a>
             </div>
             <div>
               <img src="img/email-icon.svg" alt="Email icon" class="contact-details__icon" />
