Set map link to open in new tab

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <div class="contact-details">
             <div>
               <img src="img/location-icon.png" alt="Location icon" class="contact-details__icon"/>
-              Location: <a href="https://maps.app.goo.gl/CY6Gc7RCpcekKMo89">Albuquerque, NM</a>
+              Location: <a href="https://maps.app.goo.gl/CY6Gc7RCpcekKMo89" target="_blank">Albuquerque, NM</a>
             </div>
             <div>
               <img src="img/timezone-icon.png" alt="Timezone icon" class="contact-details__icon"/>
