Simplify text on homepage

--- a/index.html
+++ b/index.html
@@ -43,18 +43,12 @@
         <main class="profile">
             <!-- Replace headshot image in main -->
             <img src="img/rocky-headshot.jpg" class="profile__portrait" alt="Rocky headshot" />
-            <h1>Hello There!</h1>
+            <h1>Hi, I'm Rocky!</h1>
             <p>
-              Hi, I’m Rocky. I’m a seasoned content and media relations specialist who is making the exciting transition into web development.
+              I’m a content and media relations pro making the exciting leap into web development. With a background in SEO, project management, and content creation, I’m passionate about building engaging, functional web experiences.
             </p>
             <p>
-              In previous roles, I’ve specialized in SEO, content creation, editing, project management and social media. My passion for creating visually appealing and functional blog pages motivated me to expand into full stack web development.
-            </p>
-            <p>
-              I am excited to apply my diverse skill set in a role where I can further develop my coding proficiency while contributing my project management and content creation skills to a dynamic team.
-            </p>
-            <p>
-                I currently work in marketing and public relations. Check out my <a href="https://mediablog.prnewswire.com/author/raquelaparker/" target="_blank">writing portfolio</a>.
+                Check out my <a href="work.html">coding projects</a>.
             </p>
         </main>
         <footer class="page-footer">
