Add project to work page for writing portfolio

--- a/work.html
+++ b/work.html
@@ -214,6 +214,14 @@
                   </ul>
                   <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank">View on GitHub</a>
                 </div>
+                <div class="project-grid__item">
+                  <img src="img/hello-world-project.png" class="project-grid__item-photo" alt="An open laptop on a desk" />  
+                    <h2>Writing Portfolio</h2>
+                    <p>
+                        In my current role as a marketing and public relations specialist, I regularly write conversational blog posts targeted to journalists and bloggers. I cover topics like media news, writing tips, upcoming events and more.
+                    </p>
+                    <a href="https://authory.com/RockyParker" target="_blank">View Writing Examples</a>
+                </div>
             </div>
         </section>
 
